--- a/index.html
+++ b/index.html
@@ -298,8 +298,11 @@
 
 </main>
 
-<footer data-i18n="footer">
-  © 2025 Europerations — Operational Automation
+<footer>
+  <p data-i18n="footer">© 2025 Europerations — Operational Automation</p>
+  <p style="margin-top: 12px;">
+    <a href="termos.html" style="color: var(--accent); text-decoration: none;" data-i18n="footer_terms">Terms of Service</a>
+  </p>
 </footer>
 
 <script>
@@ -308,6 +311,7 @@ const translations = {
     nav_how: "How it works",
     nav_service: "Service",
     nav_contact: "Contact",
+    footer_terms: "Terms of Service",
     hero_title: "We analyse operational problems caused by manual or disorganised workflows.",
     hero_description: "We help European businesses eliminate operational bottlenecks, reduce human error, and recover lost time through practical automation.",
     hero_cta: "Request an analysis",
@@ -341,6 +345,7 @@ const translations = {
     nav_how: "Wie es funktioniert",
     nav_service: "Service",
     nav_contact: "Kontakt",
+    footer_terms: "Nutzungsbedingungen",
     hero_title: "Wir analysieren operative Probleme, die durch manuelle oder unorganisierte Arbeitsabläufe verursacht werden.",
     hero_description: "Wir helfen europäischen Unternehmen, operative Engpässe zu beseitigen, menschliche Fehler zu reduzieren und verlorene Zeit durch praktische Automatisierung zurückzugewinnen.",
     hero_cta: "Analyse anfordern",
@@ -374,6 +379,7 @@ const translations = {
     nav_how: "Comment ça marche",
     nav_service: "Service",
     nav_contact: "Contact",
+    footer_terms: "Conditions d'utilisation",
     hero_title: "Nous analysons les problèmes opérationnels causés par des flux de travail manuels ou désorganisés.",
     hero_description: "Nous aidons les entreprises européennes à éliminer les goulots d'étranglement opérationnels, à réduire les erreurs humaines et à récupérer le temps perdu grâce à l'automatisation pratique.",
     hero_cta: "Demander une analyse",
