--- a/termos.html
+++ b/termos.html
@@ -191,7 +191,7 @@
   <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png/europerations-logo.png" alt="Europerations logo">
   <nav>
     <a href="index.html">Home</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html#contact">Contact</a>
   </nav>
 </header>
 
@@ -437,4 +437,3 @@
 
 </body>
 </html>
-
