--- a/termos.html
+++ b/termos.html
@@ -304,6 +304,10 @@
         📝 INSTRUÇÕES: Explique conformidade com GDPR (Lei Geral de Proteção de Dados da UE). Como você coleta, processa e armazena dados pessoais. Direitos do cliente sobre seus dados. Link para Privacy Policy separada se tiver.
       </div>
       <p>[Seu texto sobre proteção de dados e GDPR]</p>
+      <p style="margin-top: 16px;">
+        For detailed information about how we handle your personal data, please read our 
+        <a href="política-privacidade.html" style="color: var(--accent); text-decoration: none; font-weight: 600;">Privacy Policy</a>.
+      </p>
     </section>
 
     <!-- 9. WARRANTIES AND DISCLAIMERS -->
