--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
 <footer>
   <p data-i18n="footer">© 2025 Europerations — Operational Automation</p>
   <p style="margin-top: 12px;">
-    <a href="termos.html" style="color: var(--accent); text-decoration: none;" data-i18n="footer_terms">Terms of Service</a>
+    <a href="termos.html" style="color: var(--accent); text-decoration: none; margin: 0 12px;" data-i18n="footer_terms">Terms of Service</a>
+    <span style="color: var(--secondary);">|</span>
+    <a href="política-privacidade.html" style="color: var(--accent); text-decoration: none; margin: 0 12px;" data-i18n="footer_privacy">Privacy Policy</a>
   </p>
 </footer>
 
@@ -312,6 +314,7 @@ const translations = {
     nav_service: "Service",
     nav_contact: "Contact",
     footer_terms: "Terms of Service",
+    footer_privacy: "Privacy Policy",
     hero_title: "We analyse operational problems caused by manual or disorganised workflows.",
     hero_description: "We help European businesses eliminate operational bottlenecks, reduce human error, and recover lost time through practical automation.",
     hero_cta: "Request an analysis",
@@ -346,6 +349,7 @@ const translations = {
     nav_service: "Service",
     nav_contact: "Kontakt",
     footer_terms: "Nutzungsbedingungen",
+    footer_privacy: "Datenschutzerklärung",
     hero_title: "Wir analysieren operative Probleme, die durch manuelle oder unorganisierte Arbeitsabläufe verursacht werden.",
     hero_description: "Wir helfen europäischen Unternehmen, operative Engpässe zu beseitigen, menschliche Fehler zu reduzieren und verlorene Zeit durch praktische Automatisierung zurückzugewinnen.",
     hero_cta: "Analyse anfordern",
@@ -380,6 +384,7 @@ const translations = {
     nav_service: "Service",
     nav_contact: "Contact",
     footer_terms: "Conditions d'utilisation",
+    footer_privacy: "Politique de confidentialité",
     hero_title: "Nous analysons les problèmes opérationnels causés par des flux de travail manuels ou désorganisés.",
     hero_description: "Nous aidons les entreprises européennes à éliminer les goulots d'étranglement opérationnels, à réduire les erreurs humaines et à récupérer le temps perdu grâce à l'automatisation pratique.",
     hero_cta: "Demander une analyse",
