--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png/europerations-logo.png" alt="Europerations logo">
+  <img src="https://i.ibb.co/PvfXw14K/Design-sem-nome-1-removebg-preview.png" alt="Hard4Easy logo">
   <nav>
     <a href="#how" data-i18n="nav_how">How it works</a>
     <a href="#service" data-i18n="nav_service">Service</a>
