--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="card">
         <h3 data-i18n="investment_title">Investment</h3>
         <p data-i18n="investment_desc">
-          Automation projects start from €250,
+          Automation projects start from €600,
           adjusted according to complexity.
         </p>
       </div>
@@ -299,7 +299,7 @@
 </main>
 
 <footer>
-  <p data-i18n="footer">© 2025 Europerations — Operational Automation</p>
+  <p data-i18n="footer">© 2025 Hard4Easy — Operational Automation</p>
   <p style="margin-top: 12px;">
     <a href="termos.html" style="color: var(--accent); text-decoration: none; margin: 0 12px;" data-i18n="footer_terms">Terms of Service</a>
     <span style="color: var(--secondary);">|</span>
