--- a/política-privacidade.html
+++ b/política-privacidade.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy — Europerations</title>
+  <title>Privacy Policy — Hard4Easy</title>
 
   <style>
     :root {
@@ -211,7 +211,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png/europerations-logo.png" alt="Europerations logo">
+  <img src="https://i.ibb.co/PvfXw14K/Design-sem-nome-1-removebg-preview.png" alt="Hard4Easy logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="termos.html">Terms of Service</a>
@@ -229,10 +229,10 @@
     
     <div class="intro">
       <p>
-        <strong>At Europerations, we take your privacy seriously.</strong> This Privacy Policy explains how we collect, use, store, and protect your personal information when you use our services.
+        <strong>At Hard4Easy, we take your privacy seriously.</strong> This Privacy Policy explains how we collect, use, store, and protect your personal information when you use our services.
       </p>
       <div class="placeholder">
-        📝 INSTRUÇÕES: Adicione uma introdução sobre o compromisso da Europerations com a privacidade e conformidade com GDPR. Mencione que esta política é transparente e que o usuário tem controle sobre seus dados.
+        📝 INSTRUÇÕES: Adicione uma introdução sobre o compromisso da Hard4Easy com a privacidade e conformidade com GDPR. Mencione que esta política é transparente e que o usuário tem controle sobre seus dados.
       </div>
     </div>
 
@@ -432,7 +432,7 @@
 
 <footer>
   <p>
-    © 2025 Europerations — 
+    © 2025 Hard4Easy — 
     <a href="index.html">Back to Home</a> | 
     <a href="termos.html">Terms of Service</a>
   </p>
