--- a/termos.html
+++ b/termos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Terms of Service — Europerations</title>
+  <title>Terms of Service — Hard4Easy</title>
 
   <style>
     :root {
@@ -188,7 +188,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/8n36R7st/Gemini-Generated-Image-dnvzxbdnvzxbdnvz-removebg-preview.png/europerations-logo.png" alt="Europerations logo">
+  <img src="https://i.ibb.co/PvfXw14K/Design-sem-nome-1-removebg-preview.png" alt="Hard4Easy logo">
   <nav>
     <a href="index.html">Home</a>
     <a href="index.html#contact">Contact</a>
@@ -205,7 +205,7 @@
     
     <div class="intro">
       <p>
-        <strong>Welcome to Europerations.</strong> By using our services, you agree to these Terms of Service. Please read them carefully.
+        <strong>Welcome to Hard4Easy.</strong> By using our services, you agree to these Terms of Service. Please read them carefully.
       </p>
       <div class="placeholder">
         📝 INSTRUÇÕES: Adicione aqui uma introdução geral sobre a empresa e o propósito destes termos. Explique brevemente o que são os serviços da Europerations.
@@ -361,7 +361,7 @@
       <h3>13.1 Termination by Client</h3>
       <p>[Como o cliente pode encerrar]</p>
       
-      <h3>13.2 Termination by Europerations</h3>
+      <h3>13.2 Termination by Hard4Easy</h3>
       <p>[Como e quando você pode encerrar]</p>
     </section>
 
